fix: white icon mobile menu on home

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -36,6 +36,9 @@
 .header.home {
     position: absolute;
     width: 100%;
+    .menuIcon {
+        color: white;
+    }
     .logo {
         color: white;
     }
